fix: align themes in demarche card

--- a/client/src/components/UI/DemarcheCard/DemarcheCard.module.scss
+++ b/client/src/components/UI/DemarcheCard/DemarcheCard.module.scss
@@ -20,7 +20,7 @@
 }
 
 .badges {
-  margin-bottom: u(1);
+  margin-top: u(1);
   margin-right: u(1);
 
   @include rtl() {
@@ -45,6 +45,16 @@
     border-radius: 0 0 u(2) u(2);
     color: $white;
     display: block;
-    height: 100%
+    height: 100%;
   }
+}
+
+.themes {
+  flex-grow: 1;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: flex-start;
+  align-content: flex-start;
+  justify-content: flex-end;
 }
